2004-11-10  Mark McLoughlin  <mark@skynet.ie>

	* control-center-categories.[ch]: re-write to use libgnome-menu
	to load the contents of the preferences menu.

	* control-center.c:
	(relayout_canvas), (get_x), (get_y), (get_entry),
	(get_line_length): update for control-center-categories.[ch] changes.
	(activate_entry): load the .desktop file and launch.
	(create_window), (main): remove all nautilus and bonobo stuff.
	
	* gnome-control-center.png: rename from control-center2.png.
	
	* gnomecc.desktop.in: update for new icon name.
	
	* GNOME_ControlCenter.server.in: remove, we're not a Nautilus view
	anymore.
	
	* active.png, bcg_top.png, bg.png, bgtop.png,
	  blank.png, ccsplash.png, empty.png, foot.png,
	  gnome-lockscreen.png, gnome-unlockscreen.png,
	  gnomecc-ui.xml, html-view.xpm, kill-gnomecc.sh,
	  left.png, left_top.png, title.png, tree-view.xpm:
	Remove what seems to be a big bunch of cruft.
	
	* Makefile.am: remove cruft, install new icon, don't link
	aganst libnautilus.

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: don't define $(SETTINGS_DIR) - its not
	use anymore.

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-06-01  Jody Goldberg <jody@gnome.org>

	* control-center.c (relayout_canvas) : minor layout tweaks
	  and improved padding

2004-05-27  Jody Goldberg <jody@gnome.org>

	* gnomecc-rounded-rect.c : new canvas item to match nautilus.

	* control-center.c (setup_entry) : add proper focus handling

2004-05-26  Jody Goldberg <jody@gnome.org>

	* control-center.c (single_click_activates) : support nautilus' single
	  click policy.

2004-05-18  Jody Goldberg <jody@gnome.org>

	* control-center.c (select_entry) : Ensure that the selected
	  entry is visible.

2004-05-17  Jody Goldberg <jody@gnome.org>

	* control-center-categories.c : merge the icon theme handling from the
	  existing control center into the ximian shell.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1
