@@ -1,13 +1,15 @@
 [Desktop Entry]
+X-SuSE-translate=true
 Encoding=UTF-8
 _Name=GNOME Control Center
-_Comment=The GNOME configuration tool
+_GenericName=The GNOME configuration tool
 Icon=gnome-control-center
 Exec=gnome-control-center
 Terminal=false
 Type=Application
 StartupNotify=true
 Categories=GNOME;Application;Settings;
+OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=control-center
 X-GNOME-Bugzilla-Component=shell
