@@ -1,3 +1,9 @@
+2005-01-26  Jody Goldberg <jody@gnome.org>
+
+	* control-center.c (relayout_canvas) : skip lines that are finished,
+	  but keep processing up coming lines.  This should make alignment
+	  work again.  While we're here add a bit more padding at the bottom.
+
 2004-11-10  Mark McLoughlin  <mark@skynet.ie>
 
 	* control-center-categories.[ch]: re-write to use libgnome-menu
